--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,16 @@
-FROM maven:3.8.5-openjdk-17
+FROM maven:3.8.3-openjdk-17
+
+COPY . /opt/
+
 WORKDIR /opt
-COPY . /opt/ 
-RUN mvn clean package -DskipTests
+
+RUN rm -f src/main/resources/application.properties && \
+    cp -f application.properties src/main/resources/application.properties && \
+    mvn clean package -DskipTests
+
+WORKDIR target/
+
 EXPOSE 8080
-CMD ["java", "-jar", "target/student-registration-backend-0.0.1-SNAPSHOT.jar"] 
+
+ENTRYPOINT ["java","-jar"]
+CMD ["student-registration-backend-0.0.1-SNAPSHOT.jar"]
