--- a/backend/application.properties
+++ b/backend/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 spring.datasource.url=jdbc:mariadb://db:3306/student_db
-spring.datasource.username=tanu
+spring.datasource.username=root
 spring.datasource.password=tanu
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
