--- a/backend/application.properties
+++ b/backend/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-spring.datasource.url=jdbc:mariadb://db:3306/student_db
+spring.datasource.url=jdbc:mariadb://host_docker_internal:3306/student_db
 spring.datasource.username=root
 spring.datasource.password=tanu
 spring.jpa.hibernate.ddl-auto=update
