--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,8 +4,8 @@ COPY . /opt/
 
 WORKDIR /opt
 
-RUN rm -f src/main/resources/application.properties && \
-    cp -f application.properties src/main/resources/application.properties && \
+RUN rm -f ./src/main/resources/application.properties && \
+    cp -f application.properties ./src/main/resources/application.properties && \
     mvn clean package -DskipTests
 
 WORKDIR target/
