--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
-spring.datasource.url=jdbc:mariadb://affectionate_fermi:3306/student_db
+spring.datasource.url=jdbc:mariadb:// 10.100.135.116:3306/studentapp-db
 spring.datasource.username=root
-spring.datasource.password=tanu
+spring.datasource.password=tanushree
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
