--- a/manifets/secret.yaml
+++ b/manifets/secret.yaml
@@ -3,5 +3,5 @@ kind: Secret
 metadata:
   name: my-secret
 data:
-  mysql_pass: tanushree
-  mysql_user: root
+  mysql_pass: dGFudXNocmVl
+  mysql_user: cm9vdA==
