--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-spring.datasource.url=jdbc:mariadb://10.100.187.131:3306/studentapp-db
+spring.datasource.url=jdbc:mariadb://my-svc:3306/studentapp-db
 spring.datasource.username=root
 spring.datasource.password=tanushree
 spring.jpa.hibernate.ddl-auto=update
