--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-VITE_API_URL = "http://3.34.126.131:32768/api"
+VITE_API_URL = "http://a3c6cbe887c20464eb00127f3f92b3fd-631870472.ap-northeast-2.elb.amazonaws.com/api"
