--- a/backend/yaml/deploy.yaml
+++ b/backend/yaml/deploy.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: studentapp
-        image: tanushreew/studentapp:latest
+        image: tanushreew/backend:latest
         resources:
           limits:
             memory: "256Mi"
