--- a/frontend/yaml/deploy.yaml
+++ b/frontend/yaml/deploy.yaml
@@ -17,7 +17,7 @@ spec:
           app: studentapp-frontend
       spec:
         - name: studentapp-frontend
-          image: tanushreew/frontend:v1
+          image: tanushreew/frontend:latest
           resources:
              limits:
             memory: "256Mi"
